<resources>
    <string name="app_name">Pictale</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="menu_icon_description">Menu</string>
    <string name="default_notification_channel_id">Hello</string>
    <string name="msg_token_fmt" />
    <string name="default_message">Error</string>
    <string name="user_join_message">Welcome</string>
    <string name="title_activity_image">ImageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="channel_id">Notification</string>
    <string name="channel_name">Name</string>
    <string name="find_the_trending_event">Find the trending event</string>
    <string name="add_event">Add Event</string>
    <string name="Tittle_Add_event">Add Event</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="tags">Tags</string>
    <string name="public_switch">Public</string>
    <string name="btn_add">Add</string>
    <string name="anyone_radiobtn">ANYONE</string>
    <string name="editors_radiobtn">EDITORS</string>
    <string name="self_radiobtn">SELF</string>
    <string name="todo">TODO</string>
    <string name="change_info">Change Info</string>
    <string name="change_first_name">Change First Name</string>
    <string name="change_last_name">Change Last Name</string>
    <string name="surname">Surname</string>
    <string name="change">Change</string>
    <string name="close">Close</string>
    <string name="change_pass">Change Pass</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="event">Event</string>
    <string name="add_file">Add File</string>
    <string name="fav_event">Fav Event</string>
</resources>